--- a/.github/workflows/main_medical-ai-demo.yml
+++ b/.github/workflows/main_medical-ai-demo.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: medical-ai-demo
+          app-name: medical-ai
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: .
+
