--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,45 @@
+# Core Deep Learning
 torch>=2.0.0
 torchvision>=0.15.0
+
+# Image Processing
 Pillow>=9.0.0
+opencv-python>=4.7.0
 numpy>=1.23.0
+
+# Machine Learning & Metrics
 scikit-learn>=1.2.0
+
+# Visualization
 matplotlib>=3.6.0
 seaborn>=0.12.0
+
+# Utilities
 tqdm>=4.64.0
-opencv-python>=4.7.0
+pathlib2>=2.3.7; python_version < '3.4'
+
+# FastAPI & Web Server
 fastapi>=0.100.0
 uvicorn[standard]>=0.23.0
 python-multipart>=0.0.6
+
+# Streamlit Web App
+streamlit>=1.28.0
+
+# RAG & NLP
 sentence-transformers>=2.2.0
 faiss-cpu>=1.7.4
 PyPDF2>=3.0.0
-anthropic>=0.18.0
-requests>=2.28.0
-streamlit>=1.28.0
 
+# LLM API (Anthropic Claude)
+anthropic>=0.18.0
+
+# HTTP & API
+requests>=2.28.0
+
+# Environment & Configuration (optional but recommended)
+python-dotenv>=1.0.0
+
+# Additional dependencies for production
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
